# sitemap-generator

./: .gitignore  README.md  requirements.txt  setup.cfg  sitemap.xml
src/: argument_handler.py  main.py  sitemap.py
