[metadata]
name = sitemap-generator
version = 0.1.0
author = Bodo Schönfeld
author_email = bodo.schoenfeld@niftycode.de
url = https://github.com/niftycode/sitemap-generator
description = Create a sitemap file (sitemap.xml)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
requires_python = >=3.12
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
packages = find:
setup_requires =
    setuptools >=70.0.0
install_requires =
    setuptools

[options.entry_points]
console_scripts =
    sitemap-generator = src.main:main

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1
